--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.1",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
