--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.1",
     "@types/react-router-dom": "^5.3.3",
-    "axios": "^1.7.9",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
